Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.14
-
Fix Version/s: 10.1.20
-
Component/s: Character Sets
-
Sprint:10.1.20
Description
A user saw a crash similar to MDEV-8836 in MariaDB 10.1.14. The stack trace is:
160810 16:54:28 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
Server version: 10.1.14-MariaDB-enterprise
|
key_buffer_size=67108864
|
read_buffer_size=131072
|
max_used_connections=10
|
max_threads=502
|
thread_count=7
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 1168150 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
Thread pointer: 0x0x7f64c954c008
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7f657effd100 thread_stack 0x48400
|
/usr/sbin/mysqld(my_print_stacktrace+0x2e)[0x7f65a35cb6ae]
|
/usr/sbin/mysqld(handle_fatal_signal+0x38d)[0x7f65a30f720d]
|
/lib64/libpthread.so.0(+0xf130)[0x7f65a2716130]
|
/usr/sbin/mysqld(+0xab29e1)[0x7f65a35f89e1]
|
/usr/sbin/mysqld(my_copy_fix_mb+0x49)[0x7f65a35e86f9]
|
/usr/sbin/mysqld(_ZN13String_copier16well_formed_copyEPK15charset_info_stPcjS2_PKcjj+0x74)[0x7f65a2ff2a54]
|
/usr/sbin/mysqld(_ZN10Field_blob5storeEPKcjPK15charset_info_st+0x26c)[0x7f65a30edbec]
|
/usr/sbin/mysqld(_Z23fill_schema_processlistP3THDP10TABLE_LISTP4Item+0x58b)[0x7f65a2fdd1db]
|
/usr/sbin/mysqld(_Z24get_schema_tables_resultP4JOIN23enum_schema_table_state+0x28e)[0x7f65a2fe697e]
|
/usr/sbin/mysqld(_ZN4JOIN10exec_innerEv+0x6bd)[0x7f65a2fccefd]
|
/usr/sbin/mysqld(_ZN4JOIN4execEv+0x54)[0x7f65a2fcf384]
|
/usr/sbin/mysqld(_Z12mysql_selectP3THDPPP4ItemP10TABLE_LISTjR4ListIS1_ES2_jP8st_orderSB_S2_SB_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x112)[0x7f65a2fcba32]
|
/usr/sbin/mysqld(_Z13handle_selectP3THDP3LEXP13select_resultm+0x245)[0x7f65a2fcc505]
|
/usr/sbin/mysqld(+0x428f91)[0x7f65a2f6ef91]
|
/usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x5f8f)[0x7f65a2f7ab9f]
|
/usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_state+0x28e)[0x7f65a2f7e47e]
|
/usr/sbin/mysqld(+0x438c89)[0x7f65a2f7ec89]
|
/usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcj+0x1fb0)[0x7f65a2f81310]
|
/usr/sbin/mysqld(_Z10do_commandP3THD+0x169)[0x7f65a2f821b9]
|
/usr/sbin/mysqld(_Z24do_handle_one_connectionP3THD+0x18a)[0x7f65a304592a]
|
/usr/sbin/mysqld(handle_one_connection+0x40)[0x7f65a3045b00]
|
/usr/sbin/mysqld(+0x962e9d)[0x7f65a34a8e9d]
|
/lib64/libpthread.so.0(+0x7df3)[0x7f65a270edf3]
|
/lib64/libc.so.6(clone+0x6d)[0x7f65a07273dd]
|
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x7f65718df020): SELECT trx_id,trx_state,trx_started, trx_requested_lock_id,trx_wait_started, trx_weight,trx_mysql_thread_id,trx_query, trx_operation_state,trx_tables_in_use,trx_tables_locked, trx_lock_structs,trx_lock_memory_bytes,trx_rows_locked, trx_rows_modified,trx_concurrency_tickets,trx_isolation_level, trx_unique_checks,trx_foreign_key_checks,trx_last_foreign_key_error, trx_adaptive_hash_latched,trx_adaptive_hash_timeout, trx_is_read_only,trx_autocommit_non_locking, IFNULL(e.SQL_TEXT,'NULL'), IFNULL(e.MESSAGE_TEXT,'NULL'), e.ROWS_AFFECTED, e.ROWS_SENT, e.ROWS_EXAMINED,e.CREATED_TMP_DISK_TABLES, e.CREATED_TMP_TABLES,e.NO_INDEX_USED,e.NO_GOOD_INDEX_USED, IFNULL(p.USER,'cmon'), IFNULL(p.INFO,'NULL'), IFNULL(p.HOST,'NULL'), IFNULL(p.DB,'NULL'), IFNULL(x.blocking_trx_id, 'none'), UNIX_TIMESTAMP(NOW())-UNIX_TIMESTAMP(trx_started), NOW() FROM information_schema.innodb_trx t LEFT JOIN information_schema.processlist p on t.trx_mysql_thread_id=p.id LEFT JOIN information_schema.innodb_lock_waits x on t.trx_id=x.requesting_trx_id LEFT JOIN performance_schema.threads x on t.trx_mysql_thread_id=x.PROCESSLIST_ID LEFT JOIN performance_schema.events_statements_current e on e.THREAD_ID=x.THREAD_ID WHERE UNIX_TIMESTAMP(NOW())-UNIX_TIMESTAMP(trx_started)>10
|
Connection ID (thread ID): 300479
|
Status: NOT_KILLED
|
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=on,mrr_cost_based=on,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=o
|
The query seems to be:
SELECT trx_id,trx_state,trx_started, trx_requested_lock_id,trx_wait_started, trx_weight,trx_mysql_thread_id,trx_query, trx_operation_state,trx_tables_in_use,trx_tables_locked, trx_lock_structs,trx_lock_memory_bytes,trx_rows_locked, trx_rows_modified,trx_concurrency_tickets,trx_isolation_level, trx_unique_checks,trx_foreign_key_checks,trx_last_foreign_key_error, trx_adaptive_hash_latched,trx_adaptive_hash_timeout, trx_is_read_only,trx_autocommit_non_locking, IFNULL(e.SQL_TEXT,'NULL'), IFNULL(e.MESSAGE_TEXT,'NULL'), e.ROWS_AFFECTED, e.ROWS_SENT, e.ROWS_EXAMINED,e.CREATED_TMP_DISK_TABLES, e.CREATED_TMP_TABLES,e.NO_INDEX_USED,e.NO_GOOD_INDEX_USED, IFNULL(p.USER,'cmon'), IFNULL(p.INFO,'NULL'), IFNULL(p.HOST,'NULL'), IFNULL(p.DB,'NULL'), IFNULL(x.blocking_trx_id, 'none'), UNIX_TIMESTAMP(NOW())-UNIX_TIMESTAMP(trx_started), NOW() FROM information_schema.innodb_trx t LEFT JOIN information_schema.processlist p on t.trx_mysql_thread_id=p.id LEFT JOIN information_schema.innodb_lock_waits x on t.trx_id=x.requesting_trx_id LEFT JOIN performance_schema.threads x on t.trx_mysql_thread_id=x.PROCESSLIST_ID LEFT JOIN performance_schema.events_statements_current e on e.THREAD_ID=x.THREAD_ID WHERE UNIX_TIMESTAMP(NOW())-UNIX_TIMESTAMP(trx_started)>10
|
Attachments
Issue Links
- links to