MDEV-10545: Exclude wsrep threads from I_S.PROCESSLIST.